tests/toy/pos/000136_cdrc2.toylang
program a = { while 0 do a = a; } .
