tests/toy/neg/000828_mutation.toylang
program a = { a = while == a; } .
